tests/neg/semantic_cast_pointer_to_float_invalid.baa
// EXPECT: التحويل من مؤشر يدعم الأنواع الصحيحة فقط حالياً

صحيح الرئيسية() {
    صحيح س = ١.
    صحيح* م = &س.
    عشري ف = كـ<عشري>(م).
    إرجع ٠.
}
